setup-scripts/64-conjur/conjur-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conjur-ingress
  namespace: conjur
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: conjur
spec:
  ingressClassName: nginx
  tls:
    - secretName: conjur-ssl
      hosts:
      - conjur.vps-2.cluster-4.de          
  rules:
  - host: "conjur.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: conjur-service
              port:
                number: 80
